unpackaged/main/default/objects/Contributing_Program__c/Contributing_Program__c.object-meta.xml
<CustomObject>
    <label>Contributing Program</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Contributing Program</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contributing Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>