unpackaged/main/default/objects/Contributing_Program__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Contributing Programs</relationshipLabel>
    <relationshipName>Contributing_Programs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>