unpackaged/main/default/objects/Contributing_Program__c/fields/GIFTS_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_Payment_ID__c</fullName>
    <formula>Payment__r.GIFTS_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIFTS Payment ID</label>
    <type>Text</type>
</CustomField>