unpackaged/main/default/objects/Contributing_Program__c/fields/GIFTS_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_Request_ID__c</fullName>
    <formula>Funding_Award__r.Request_Number_Legacy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GIFTS Request ID</label>
    <type>Text</type>
</CustomField>