unpackaged/main/default/objects/Contributing_Program__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicated that the Program is the primary owner of the Request.</inlineHelpText>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>