unpackaged/main/default/objects/Contributing_Program__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the actual scheduled payment record.</inlineHelpText>
    <label>Payment</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Contributing Programs</relationshipLabel>
    <relationshipName>Contributing_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>