unpackaged/main/default/objects/Contributing_Program__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Contributing Programs</relationshipLabel>
    <relationshipName>Contributing_Programs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>