unpackaged/main/default/objects/Contributing_Program__c/fields/Program_Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Department_Code__c</fullName>
    <formula>Program__r.Department_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Department Code</label>
    <type>Text</type>
</CustomField>