unpackaged/main/default/objects/Contributing_Program__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <formula>Funding_Award__r.AwardNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Number</label>
    <type>Text</type>
</CustomField>